# tolmak

./: .gitignore  CMakeLists.txt  README.md  compile.sh
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
include/: common.h  components.h  frame_buffer.h  game_object.h  light.h  material.h  materials.h  mesh.h  mesh_io.h  orbit_camera.h  shader.h  texture.h  transform.h
include/utils/: array.h  bucket_allocator.h  log.h
resources/shaders/: light.glsl  phong.glsl  plain_color.glsl
src/: common.cpp  components.cpp  game_object.cpp  light.cpp  main.cpp  mesh.cpp  mesh_io.cpp  mesh_io.h  shader.cpp  shader_parser.cpp  texture.cpp
src/utils/: log.cpp
